--- a/projects/basicBlog.html
+++ b/projects/basicBlog.html
@@ -22,7 +22,7 @@
             <p>Here are some blog post I've written</p>
             
           <ul>
-                <li> <a href= "about.html" >More info about me<a/a></a></li>
+                <li> <a href= "about.html" >More info about me</a></li>
             
                 <li> <a href= "weather.html">My thoughts on the weather</a></li>
           </ul>
