--- a/animations/index.html
+++ b/animations/index.html
@@ -2,21 +2,21 @@
     <head>
         <style>
             #mycontainer{
-                width: 400px;
-                height: 400px;
+                width: 200px;
+                height: 200px;
                 position: relative;
-                background: yellow;
+                background: grey;
             }
             #myAnimation{
                 width: 50px;
                 height: 50px;
                 position: absolute;
-                background: red;
+                background:white;
             }
         </style>
     </head>
 <body>
-<h1>My First JavaScript Animation</h1>
+<h2>JavaScript Animation</h2>
 <button onclick="myMove()">Click me</button>
 <div id ="myContainer">
     <div id ="myAnimation"></div>
