--- a/index.html
+++ b/index.html
@@ -26,20 +26,29 @@ rel="stylesheet">
     </nav>
     <hr>
 </header>
-    <body>
-        <section>
-        <div class="room-description">
-            <h1>Explore my sight!</h1>
-            <p>Click an image to learn more</p>
-        </div>
-        <div class="room-gallery">
-            <img src="/Users/naomirodriguez/Documents/Coding_fellowship/coding_fellowship/Blog/blog_img/educationBig.jpg" class="gallery-highlight" alt="">
-            <div class="room-preview">
-                <img src="/Users/naomirodriguez/Documents/Coding_fellowship/coding_fellowship/Blog/blog_img/macbook-pro-92904-2.jpg" class="room-active" alt="">
-                <img src="/Users/naomirodriguez/Documents/Coding_fellowship/coding_fellowship/Blog/blog_img/workExperienceSmall.jpg" alt="">
-                <img src="/Users/naomirodriguez/Documents/Coding_fellowship/coding_fellowship/Blog/blog_img/white-book-in-white-table-near-yellow-wall-3760323-3.jpg" alt="">
+    <body id="reggie">
+        <div class="container">
+            <div class="gallery">
+                <figure class="gallery__item gallery__item--1">
+                    <img src="Screen Shot 2020-07-15 at 9.05.47 PM.png" alt="Gallery image 1" class="gallery__img">
+                </figure>
+                <figure class="gallery__item gallery__item--2">
+                    <img src="Screen Shot 2020-07-15 at 9.41.16 PM.png" alt="Gallery image 2" class="gallery__img">
+                </figure>
+                <figure class="gallery__item gallery__item--3">
+                    <img src="Screen Shot 2020-07-15 at 10.18.32 PM.png" alt="Gallery image 3" class="gallery__img">
+                </figure>
+                <figure class="gallery__item gallery__item--4">
+                    <img src="Screen Shot 2020-07-15 at 9.47.24 PM.png" alt="Gallery image 4" class="gallery__img">
+                </figure>
+                <figure class="gallery__item gallery__item--5">
+                    <img src="Screen Shot 2020-07-15 at 9.52.06 PM.png" alt="Gallery image 5" class="gallery__img">
+                </figure>
+                <figure class="gallery__item gallery__item--6">
+                    <img src="Screen Shot 2020-07-15 at 9.43.37 PM.png" alt="Gallery image 6" class="gallery__img">
+                </figure>
             </div>
-        </section>
+        </div>
             <script src="/Users/naomirodriguez/Documents/Coding_fellowship/coding_fellowship/Blog/blog.js"></script>
     </body>
     </html>
