--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
 
@@ -59,7 +60,7 @@
         <a href="#contact">Contact Me</a>
     </div>
     <div class="profile-image">
-        <img src= "IMG_1969.jpg">
+        <img src= "Screen Shot 2020-07-23 at 12.16.02 PM.png">
     </div>
 </div>
 <div class="container about" id="about">
