--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="blog.css">
+    <script> src="blog.js"</script>
 </head>
 <body>
 
@@ -34,6 +35,7 @@
             <span>I</span>
             <span class="m-left">'</span>
             <span class="m-left">m</span>
+            <span></span>
             <span class="m-left name">N</span>
             <span class="m-left name ">a</span>
             <span class="m-left name">o</span>
@@ -56,17 +58,22 @@
 
         
         </h1>
-        <p> / JavaScript / React</p>
+        <p> HTML&CSS / JavaScript / React</p>
         <a href="#contact">Contact Me</a>
     </div>
-    <div class="profile-image">
+    <div class="profile-image" id="img-profile">
         <img src= "Screen Shot 2020-07-23 at 12.16.02 PM.png">
     </div>
 </div>
 <div class="container about" id="about">
     <h1> About</h1>
     <div class="about-me-info">
-        <p>I am 19 years old...</p>
+        <li><h4 id="about-me-info-paragraph" style="color: #ED5565;"> 
+            <ul style="color: lightgrey;"> - Front End developer</ul>
+            <ul style="color: lightgrey;"> - Biology Major and Spanish Minor at Webster University</ul>
+            <ul style="color: lightgrey;"> - Firm believer in the superiority of crunchy over smooth peanut butter</ul>
+            <ul style="color: lightgrey;"> - Typing Speed of over 85 words per minute</ul>
+        </h4></li>
     </div>
     <img src="dotted-shape.png">
 </div>
@@ -100,47 +107,151 @@
         </div>
     </div>
 
-    <div class="html">
-        <div class="tag-react">
-            <p>React</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 id="project-header" style="color: #bebebe;">Projects</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div class="row">
+        <div class="column">
+          <div class="card">
+              <h2>HTML</h2>
+              <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+              <p>Click Me</p>
+          </div>
         </div>
-        <div class="progressbar">
-            <div class="bar-react"></div>
+        <div class="column">
+          <div class="card">
+            <h2>CSS</h2>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="popup" onclick="myFunction()">Click me to toggle the popup!
+                <span class="popuptext" id="myPopup"><button>Click me</button></span>
+              </div>
+          </div>
         </div>
-    </div>
-</div>
+        <div class="column">
+          <div class="card">
+            <h2>JavaScript</h2>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <p>Click Me</p>
+          </div>
+        </div>
+        
 
-<div class="container work" id=work >
-    <h1> work</h1>
-    <div class="work catergory">
-        <button id="designing" class="active">Web Designing</button>
-        <button id="animation">Web Animation</button>
-        <button id="project">React Projects</button>
-    </div>
-    <div class="category-designing showCategory">
-        <a href=""><img src="2.png"></a>
-        <a href=""><img src="3.png"></a>
-        <a href=""><img src="2.png"></a>
-        <a href=""><img src="Screen Shot 2020-07-15 at 10.01.32 PM.png"></a>
-        <a href=""><img src="Screen Shot 2020-07-15 at 9.52.06 PM.png"></a>
-    </div>
 
-    <div class="category-designing hideCategory">
-        <a href=""><img src="2.png"></a>
-        <a href=""><img src="3.png"></a>
-        <a href=""><img src="2.png"></a>
-        <a href=""><img src="Screen Shot 2020-07-15 at 10.01.32 PM.png"></a>
-        <a href=""><img src="Screen Shot 2020-07-15 at 9.52.06 PM.png"></a>
-    </div>
-
-    <div class="category-designing hideCategory">
-        <a href=""><img src="2.png"></a>
-        <a href=""><img src="3.png"></a>
-        <a href=""><img src="2.png"></a>
-        <a href=""><img src="Screen Shot 2020-07-15 at 10.01.32 PM.png"></a>
-        <a href=""><img src="Screen Shot 2020-07-15 at 9.52.06 PM.png"></a>
-    </div>
-</div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                    <br>
+                    <br>
+                    <br>
 <div class="container contact" id="contact">
     <h1>Contact</h1>
     <form>
@@ -154,4 +265,5 @@
 
 
 </body>
+<script src="blog.js"></script>
 </html>
