--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p> HTML&CSS / JavaScript / React</p>
         <a href="#contact">Contact Me</a>
     </div>
-    <div class="profile-image" id="img-profile">
+    <div class="profile-image" id="img-profile" style="border-radius: 5px;">
         <img src= "Screen Shot 2020-07-23 at 12.16.02 PM.png">
     </div>
 </div>
@@ -146,8 +146,10 @@
 
     <div class="row">
         <div class="column">
-          <div class="card">
+          <div class="card_html">
               <h2>HTML</h2>
+              <p class="line-1 anim-typewriter" style="color: white;">Projects</p>
+              </div>
               <br>
             <br>
             <br>
